<resources>
    <string name="app_name" translatable="false">The Movie Database</string>
    <string name="date">DATE</string>
    <string name="rating">Rating</string>
    <string name="expected">Expected</string>
    <string name="all">POPULAR</string>
    <string name="_2020" translatable="false">dingetje</string>
    <string name="hele_hoop_text" translatable="false">zooi tyuguyguykfuyfuyfkufukyfyfy</string>
    <string name="enter_movie">Enter Movie</string>
    <string name="write_review">SHOW REVIEWS</string>
    <string name="reviews">REVIEWS</string>
    <string name="submit_review">Submit review</string>
    <string name="ReviewRating">Rating ★</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="language">Country:</string>
    <string name="night">Night</string>
    <string name="dash" translatable="false">/</string>
    <string name="english">United States</string>
    <string name="dutch">Netherlands</string>
    <string name="day">Day</string>
    <string name="theme">Theme:</string>
    <string name="languageChangedNL">Country changed to the Netherlands</string>
    <string name="languageChangedEN">Country changed to the United States</string>
    <string name="expand_review">Expand Review</string>
    <string name="click_to_type">click to type</string>
    <string name="your_review">Your review:</string>
</resources>
