<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menubar">

</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/playbuttongreen"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <LinearLayout
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbackground"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="23dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your review:"
                    android:textColor="@color/playbuttongreen"
                    android:textSize="20sp">
                </TextView>
                <EditText
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:hint="click to type"
                    android:textColorHint="@color/darker_white">
                </EditText>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="21dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:background="@color/playbuttongreen"
                            android:text="@string/submit_review"
                            android:textSize="12sp"

                            >
                        </Button>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="95dp"
                            android:text="@string/ReviewRating"
                            android:textColor="@color/orange"
                            android:layout_marginStart="95dp">
                        </TextView>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/_0_0"
                            android:textColorHint="@color/darker_white"
                            android:layout_marginTop="1dp"
                            >
                        </EditText>
                    </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>